--- a/src/app/layout/main-panel/work-panel/inventory/product-data/create/product-data.create.html
+++ b/src/app/layout/main-panel/work-panel/inventory/product-data/create/product-data.create.html
@@ -4,19 +4,19 @@
   <div class="form-layout">
     <select-text-required #pdConnCtrl keyField="id" valueField="name"
                           [(key)]="pd.connectionId"
-                          [label]="loc('connection')"
+                          [label]="mod('connectionCode')"
                           [list]="connections"
                           (keyChange)="onConnectionChange($event)"></select-text-required>
     <br/>
     <div *ngIf="status == Status.Local">
-      <input-text-required   #pdSymbolCtrl   [label]="loc('symbol')"      [(value)]="pd.symbol"      [len]="16"></input-text-required><br/>
-      <input-text-required   #pdNameCtrl     [label]="loc('name')"        [(value)]="pd.name"        [len]="64"></input-text-required><br/>
-      <input-number-required #pdIncremCtrl   [label]="loc('increment')"   [(value)]="pd.increment"   [min]="0.00000001" [max]="1"></input-number-required><br/>
-      <select-text-required  #pdMarketCtrl   [label]="loc('marketType')"  [(key)]  ="pd.marketType"  [map]="markets"></select-text-required><br/>
-      <select-text-required  #pdProductCtrl  [label]="loc('productType')" [(key)]  ="pd.productType" [map]="products"></select-text-required><br/>
+      <input-text-required   #pdSymbolCtrl   [label]="mod('symbol')"      [(value)]="pd.symbol"      [len]="16"></input-text-required><br/>
+      <input-text-required   #pdNameCtrl     [label]="mod('name')"        [(value)]="pd.name"        [len]="64"></input-text-required><br/>
+      <input-number-required #pdIncremCtrl   [label]="mod('increment')"   [(value)]="pd.increment"   [min]="0.00000001" [max]="1"></input-number-required><br/>
+      <select-text-required  #pdMarketCtrl   [label]="mod('marketType')"  [(key)]  ="pd.marketType"  [map]="markets"></select-text-required><br/>
+      <select-text-required  #pdProductCtrl  [label]="mod('productType')" [(key)]  ="pd.productType" [map]="products"></select-text-required><br/>
       <select-text-required  #pdExchangeCtrl
                             [(key)]="pd.exchangeId"
-                            [label]="loc('exchange')"
+                            [label]="mod('exchangeCode')"
                             keyField="id" valueField="code"
                             [list]="exchanges"></select-text-required>
     </div>
